--- a/index.html
+++ b/index.html
@@ -26,7 +26,14 @@
         <p class="top-right" id="timer">timer</p>
       </div>
     </div>
-    
+    <div class="container text-center space">
+        <h1>Would you like to start the quiz</h1>
+        <button type="button" class="btn btn-danger" id="start-quiz">Danger</button>
+    </div>
+    <div class="container text-center space" id="quiz">
+        <h2 id="question"></h2>
+        <ul id="answers"></ul>
+    </div>
 
     <script src="script.js" async defer></script>
   </body>
