answer buttons now display through DOM

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <p class="top-right" id="timer">timer</p>
       </div>
     </div>
-    <div class="container text-center space">
+    <div class="container text-center space" id="welcome">
         <h1>Would you like to start the quiz</h1>
         <button type="button" class="btn btn-danger" id="start-quiz">Danger</button>
     </div>
     <div class="container text-center space" id="quiz">
         <h2 id="question"></h2>
-        <ul id="answers"></ul>
+        <p id="answers"></p>
     </div>
 
     <script src="script.js" async defer></script>
