all questions now progress through when the user selects the correct answer. Also the score is being recorded

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="container text-center space" id="welcome">
         <h1>Would you like to start the quiz</h1>
-        <button type="button" class="btn btn-danger" id="start-quiz">Danger</button>
+        <button type="button" class="btn btn-danger" id="start-quiz">Start</button>
     </div>
     <div class="container text-center space" id="quiz">
         <h2 id="question"></h2>
