wrong answers now subtract 18 seconds and proceed to the next question

--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
         <p id="answers"></p>
     </div>
 
+    <div class="container text-center space" id="highScoresSection">
+      <h2 id="scoresMessage"></h2>
+      <p id="scoresChart"></p>
+  </div>
+
     <script src="script.js" async defer></script>
   </body>
 </html>
