added function to render the score screen. score is consol logged, but not yet stored to local memory

--- a/index.html
+++ b/index.html
@@ -27,18 +27,25 @@
       </div>
     </div>
     <div class="container text-center space" id="welcome">
-        <h1>Would you like to start the quiz</h1>
-        <button type="button" class="btn btn-danger" id="start-quiz">Start</button>
+      <h1>Would you like to start the quiz</h1>
+      <button type="button" class="btn btn-danger" id="start-quiz">
+        Start
+      </button>
     </div>
     <div class="container text-center space" id="quiz">
-        <h2 id="question"></h2>
-        <p id="answers"></p>
+      <h2 id="question"></h2>
+      <p id="answers"></p>
     </div>
 
+    
+
     <div class="container text-center space" id="highScoresSection">
-      <h2 id="scoresMessage"></h2>
+      <div id="scoresMessage">
+        
+      </div>
+      <form id="score-form"></form>
       <p id="scoresChart"></p>
-  </div>
+    </div>
 
     <script src="script.js" async defer></script>
   </body>
