Several bugs still persist. The High score list shows up above the message, the timer from the highscore page moves at double speed, if a user hits the last question wrong the page goes blank

--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
       <p id="scoresChart"></p>
     </div>
 
+    <div class="Container text-center background" id="scoreBoard">
+      <ul id="scoreBoardList"></ul>
+      <button type="button" class="btn btn-danger" id="start-quiz-score"></button>
+    </div>
+
     <script src="script.js" async defer></script>
   </body>
 </html>
